--- a/src/content.css
+++ b/src/content.css
@@ -1,6 +1,51 @@
-.question{
-    width: 300px;
-    height: 300px;
-    background-color: white;
-    margin: 20px;
-}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Titillium Web", sans-serif;
+  }
+  
+  .header {
+    height: auto;
+    width: 100%;
+    background-color: aquamarine;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .header h2 {
+    font-size: 30px;
+  }
+  
+  .header-left {
+    flex: 1;
+    text-align: left;
+  }
+  
+  .header-center {
+    flex: 1;
+    text-align: center;
+  }
+  
+  .header-right {
+    flex: 1;
+    text-align: right;
+    display: flex;
+    flex-direction: column; /* Arrange "shashi" below "header right side" */
+    align-items: flex-end; /* Align "shashi" to the right within the column */
+    margin-right: 10px;
+  }
+  
+  .header-right h3 {
+    margin-top: 10px; /* Add spacing between "header right side" and "shashi" */
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+  }
+  
+  .header-content {
+    display: flex;
+    align-items: center;
+    flex: 1;
+  }
+  
